# VibeCC

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: main.yml  pr.yml
docs/design/: HIGH_LEVEL_DESIGN.md
docs/design/components/dashboard/: API.md  DESIGN.md
docs/design/components/rest_api/: API.md  DESIGN.md
docs/design/components/state_store/: API.md  DESIGN.md
freespec/: AGENTS.md  README.md  freespec.yaml  pyproject.toml
freespec/docs/: instructions.md  spec-format.md
freespec/examples/course-registration/: README.md  server.spec
freespec/examples/course-registration/api/: auth.spec  courses.spec  enrollment-api.spec  registrations.spec  students.spec
freespec/examples/course-registration/endpoints/: courses.spec  registrations.spec  students.spec
freespec/examples/course-registration/entities/: course.spec  enrollment.spec  registration.spec  session.spec  student.spec
freespec/examples/course-registration/services/: auth.spec  enrollment-service.spec  enrollment.spec
freespec/src/freespec/: __init__.py  cli.py  config.py
freespec/src/freespec/generator/: __init__.py  compiler.py  cpp_runner.py  headers.py  impl.py  prompts.py  runner.py  stubs.py  tests.py
freespec/src/freespec/llm/: __init__.py  claude_code.py  session_logger.py
freespec/src/freespec/parser/: __init__.py  dependency.py  models.py  spec_parser.py
freespec/src/freespec/rebuild/: __init__.py  detector.py  manifest.py
freespec/src/freespec/verifier/: __init__.py  exports.py  imports.py
freespec/tests/integration/: test_compile.py  test_cpp_prompts.py
freespec/tests/unit/: test_compiler.py  test_config.py  test_cpp_runner.py  test_dependency.py  test_exports.py  test_generators.py  test_parser.py  test_prompts.py  test_runner.py  test_session_logger.py
freespec/tests/unit/rebuild/: __init__.py  test_detector.py  test_manifest.py
src/vibecc/: __init__.py  logging.py
src/vibecc/api/: __init__.py  app.py  dependencies.py  events.py  models.py  worker.py
src/vibecc/api/routes/: control.py  events.py  history.py  sync.py  (+2 more)
src/vibecc/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src/vibecc/git_manager/: __init__.py  exceptions.py  manager.py  models.py
src/vibecc/kanban/: __init__.py  adapter.py  exceptions.py  models.py
src/vibecc/orchestrator/: __init__.py  exceptions.py  models.py  orchestrator.py
src/vibecc/scheduler/: __init__.py  models.py  scheduler.py
src/vibecc/state_store/: __init__.py  database.py  exceptions.py  models.py  store.py
src/vibecc/workers/: __init__.py  coder.py  models.py  testing.py
tests/: conftest.py
tests/integration/api/: __init__.py  test_control_routes.py  test_events.py  test_pipeline_history_routes.py  test_project_routes.py  test_sync_routes.py
tests/integration/git_manager/: __init__.py  test_git_manager.py
tests/integration/kanban/: __init__.py  test_kanban_adapter.py
tests/integration/orchestrator/: __init__.py  test_orchestrator.py
tests/integration/state_store/: test_database.py  test_history_operations.py  test_pipeline_operations.py  test_project_operations.py
tests/integration/workers/: __init__.py  test_coder_worker.py  test_testing_runner.py
tests/unit/: test_example.py  test_logging.py
tests/unit/api/: __init__.py  test_control_routes.py  test_events.py  test_history_routes.py  test_pipeline_routes.py  test_project_routes.py
tests/unit/git_manager/: __init__.py  test_git_manager.py
tests/unit/kanban/: __init__.py  test_kanban_adapter.py
tests/unit/orchestrator/: test_orchestrator.py
tests/unit/scheduler/: test_scheduler.py
tests/unit/state_store/: test_history_operations.py  test_models.py  test_pipeline_operations.py  test_project_operations.py
tests/unit/workers/: __init__.py  test_coder_worker.py  test_testing_runner.py
(+62 files in other folders)
