[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freespec"
version = "0.1.0"
description = "FreeSpec compiler - generate code stubs from .spec files"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
freespec = "freespec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/freespec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
